== 4.0.0 June 23, 2015
* Replace jeweler with bundler for gem management

== 3.0.0.beta6 August 23, 2011
* Move validation to Rate model

== 3.0.0.beta5 August 23, 2011
* Validate minimum of stars

== 3.0.0.beta4 August 16, 2011
* Allow configuration per dimension

== 3.0.0.beta2 August 8, 2010
* Fix dom_class and tap methods in rails.rc

== 2.2.3 March 10, 2010
* Fix validation of current_user to show linked stars

== 2.2.2 March 9, 2010
* Fix bug for jRuby
* Fixed user self relational model to be rater and rateable.

== 2.2.1 March 8, 2010
* Changed :force_dynamic for its opposite :force_static.
* Fixed I18n texts.
* Fixed missed quotes for Rate belongs_to association with User class
* Detailed wrapper DOM id with passed hash.

== 2.2.0 March 7, 2010
* Improved model methods and options.
* Works now with inherited models.
* Removed HTML and CSS options for helper for sake of simpleness.
* Renamed helper option :small_stars to :small.
* Changed whole helper approach. It should work the same as before.
  (Except for the renamed and removed options)
* Removed :force_dynamic, you should exclude the helper from cache since it uses
  authorization.
* Fixed opened bugs so far.

== 2.1.5 January 28, 2010
* Renamed options method name to avoid collapse.
* Removed CSS duplication.

== 2.1.4 January 25, 2010
* Added option for showing current_user's rate instead of global average

== 2.1.0 July 25, 2009
* AjaxfulRating is now available as a gem